# Hopping_Control_Simulated_in_Pyhton_and_Coppelia

./: README.md
Coppelia_Model/: body_in_line_with_leg.ttt  quadruped_simple.ttt  readme.md  single_body_up_and_down.ttt
src/: height_control_process.py  height_controller_mpc.py  hopping_control_process.py  hopping_controller_mpc.py
src/simulation/: CMakeLists.txt  simBridge.cpp
test/: test-model-body-in-line-with-leg.py  test-model-quadruped-simple.py
